[package]
name = "tree-sitter-haxe"
description = "haxe grammar for the tree-sitter parsing library"
version = "0.13.0"
keywords = ["incremental", "parsing", "tree-sitter", "haxe"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/themarcocara/tree-sitter-haxe"
edition = "2021"
license = "MIT"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE.md",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26"
